Started work on the registration/authorization module on the client

--- a/Client/src/assets/styles/main.scss
+++ b/Client/src/assets/styles/main.scss
@@ -1,6 +1,6 @@
 // Import Bulma's core
 @import "~bulma/sass/utilities/_all";
-$primary: #788921;
+$primary: #41b883;
 $primary-invert: findColorInvert($primary);
 
 $colors: (
