Refactoring login/registration pages

--- a/Client/src/assets/styles/main.scss
+++ b/Client/src/assets/styles/main.scss
@@ -23,3 +23,12 @@ $colors: (
 .parse-btn {
   margin-top: 2rem;
 }
+
+.button_auth {
+  display: flex;
+  margin: 0 auto;
+}
+
+.center {
+  text-align: center;
+}
